<resources>
    <string name="app_name">TFG</string>
    <string name="sec_entrantes">Entrantes</string>
    <string name="sec_bebidas">Bebidas</string>
    <string name="sec_pizza">Pizza</string>
    <string name="sec_pasta">Pasta</string>
    <string name="sec_principales">Platos Principales</string>
    <string name="sec_postres">Postres</string>
    <string name="Cart">Carrito</string>
    <string name="profile">Perfil</string>
    <string name="checkout">Añadir al Carrito</string>
    <string name="loading">Cargando...</string>
    <string name="pay">Pagar</string>
</resources>