<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/menu_grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange_500"
    tools:context=".Carta">

    <GridLayout
        android:id="@+id/menu_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:columnCount="2"
        android:padding="15dp"
        android:rowCount="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imgEntrantes"
                android:tag="entrantes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/sec_entrantes"
                android:scaleType="centerCrop"
                android:src="@drawable/entrantes"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_entrantes"
                android:fontFamily="@font/morrisromanblack"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imgBebidas"
                android:tag="bebidas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/sec_bebidas"
                android:scaleType="centerCrop"
                android:src="@drawable/bebidas"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_bebidas"
                android:fontFamily="@font/morrisromanblack"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imgPizza"
                android:tag="pizza"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/sec_pizza"
                android:scaleType="centerCrop"
                android:src="@drawable/pizza"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_pizza"
                android:fontFamily="@font/morrisromanblack"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imgPasta"
                android:tag="pasta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:fontFamily="@font/morrisromanblack"
                android:contentDescription="@string/sec_pasta"
                android:scaleType="centerCrop"
                android:src="@drawable/pasta"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_pasta"
                android:fontFamily="@font/morrisromanblack"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp"
            tools:ignore="TextSizeCheck">

            <ImageView
                android:id="@+id/imgPrincipales"
                android:tag="principales"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/sec_principales"
                android:scaleType="centerCrop"
                android:src="@drawable/carnes"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_principales"
                android:fontFamily="@font/morrisromanblack"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_margin="16dp">

            <ImageView
                android:id="@+id/imgPostres"
                android:tag="postres"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:contentDescription="@string/sec_postres"
                android:scaleType="centerCrop"
                android:src="@drawable/postres"
                tools:ignore="DuplicateSpeakableTextCheck" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@color/black"
                android:text="@string/sec_postres"
                android:fontFamily="@font/morrisromanblack"
                android:textColor="@color/white"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>


    </GridLayout>

</RelativeLayout>